rendering XOs on click

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <h1 class="title">Tic Tac Toe</h1>
       </section>
       <section class="player-turn">
-        <h3>
-          Player <span class="display-current-player playerX">X</span>'s turn.
-        </h3>
+        <h3 class="display-player playerX">Make your move</h3>
       </section>
       <section class="game-container">
         <div class="tile"></div>
