--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="title">Tic Tac Toe</h1>
       </section>
       <section class="player-turn">
-        <h3 class="display-player playerX">Make your move</h3>
+        <!-- <h3 class="display-player playerX">Make your move</h3> -->
       </section>
       <section class="game-container">
         <div class="tile"></div>
@@ -26,7 +26,12 @@
         <div class="tile"></div>
         <div class="tile"></div>
       </section>
-      <section class="diplay announcer hide"></section>
+      <section class="display announcer playerX">Player X's Turn</section>
+      <div class="scoreboard">
+        <section class="score scoreX">Player X Score = 0</section>
+        <section class="score scoreO">Player O Score = 0</section>
+      </div>
+
       <section class="controls">
         <button id="reset">Reset Game</button>
       </section>
