reset game button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <section class="controls">
         <button id="reset">Reset Board</button>
-        <button id="reset">Reset Game</button>
+        <button id="reset-game">Reset Game</button>
       </section>
     </main>
   </body>
