AI bugged version
Will need to restart to avoid the bugs

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <section class="controls">
         <!-- <button id="reset">Reset Board</button> -->
-        <button id="reset-game" class="reset-game">Reset Game</button>
+        <button id="reset-game" class="reset-game">Restart Game</button>
         <button id="reset-game" class="return-menu">Menu</button>
       </section>
     </main>
