Refactored and Debugged AI code

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
       <section class="player-selection">
         <section class="opponent">Pick your opponent</section>
         <button id="opponent-selection" class="opponent-friend">Friend</button>
-        <button id="opponent-selection" class="opponent-AI">
-          Unbeatable AI
-        </button>
+        <button id="opponent-selection" class="opponent-AI">Computer</button>
       </section>
     </main>
 
@@ -55,7 +53,6 @@
       </section>
 
       <section class="controls">
-        <!-- <button id="reset">Reset Board</button> -->
         <button id="reset-game" class="reset-game">Restart Game</button>
         <button id="reset-game" class="return-menu">Menu</button>
       </section>
